--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  color: #fff;
-  font-family: -apple-system, Lato, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: -apple-system, Menlo, Roboto Mono, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -22,4 +21,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@font-face{
+  font-family: 'Menlo';
+  src: url("/Menlo-Regular.ttf");
+  font-style: normal;
+  font-weight: 400;
 }
